--- a/Server/docker-compose.yml
+++ b/Server/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     ports:
       - 80:80
       - 8080:8080
+      - 443:443
+    volumes:
+      -  /etc/letsencrypt/live/smartenergytable.rubenwoldhuis.nl:/certs
 
   service.redis:
     image: bitnami/redis:5.0
