--- a/Server/docker-compose.yml
+++ b/Server/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     ports:
       - 80:80
       - 8080:8080
+      - 443:443
+      - 8443:8443
+    volumes:
+      - ./certs:/certs
 
   service.redis:
     image: bitnami/redis:5.0
