[Added] database option & [Changed] alpine to scratch

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -7,10 +7,9 @@ RUN go mod download
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o server ./cmd/server
 
-FROM alpine:latest
-RUN apk --no-cache add ca-certificates
+FROM scratch
 
 WORKDIR /root/
 COPY --from=builder /go/server/server .
 
-CMD [ "./server" ]
+CMD [ "./server", "-database=redis" ]
